# LesserBank

./: .gitignore  Dockerfile  README.md  api.Dockerfile  deploy-docker.sh  diesel.toml  docker-compose.yml  frontend.Dockerfile  init.migrations.Dockerfile  package-lock.json  package.json
api/: Cargo.toml
api/insomnia/: Insomnia_2023-07-18.json  Insomnia_2023-07-22.json  Insomnia_2023-07-24.json
api/migrations/2023-07-15-091803_add_account_types/: down.sql  up.sql
api/migrations/2023-07-16-152142_store_balance_in_cents/: down.sql  up.sql
api/migrations/2023-07-19-134413_more_account_fields/: down.sql  up.sql
api/migrations/2023-07-23-115002_add_transactions/: up.sql
api/migrations/2023-07-26-055131_create_accounts/: down.sql  up.sql
api/migrations/test_data/: down.sql  up.sql
api/src/: accounts_service.rs  error.rs  handlers.rs  lib.rs  main.rs  models.rs  routes.rs  schema.rs  traits.rs  util.rs
api/src/api/: error.rs  mod.rs
api/src/api/accounts/: error.rs  handlers.rs  mod.rs  models.rs  routes.rs  transform.rs  util.rs
api/src/api/transactions/: handlers.rs  mod.rs  models.rs  transform.rs
api/src/models/: account.rs  mod.rs  schema.rs  transaction.rs
api/src/repository/: accounts_repo.rs  accounts_repository.rs  error.rs  mod.rs  transactions_repository.rs
api/src/repository/accounts/: accounts_repo.rs  mod.rs
frontend/: package.json
insomnia/: Insomnia_2023-07-03.json
k8s-templates/: deployment-api.yml  deployment-postgres.yml  dev-api-ingress.yml  job-migrations.yml  service-api.yml  service-postgres.yml
lesser-bank/: Cargo.toml
(+45 files in other folders)
