[package]
name = "lesser-bank-api"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
rand = "0.8.5"
diesel = { version = "2.1.0", features = ["postgres", "numeric", "r2d2"] }
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }
env_logger = "0.10.0"

[dev-dependencies]
mockall = "0.11.2"
serde_json = "1.0"