[package]
name = "lesser-bank-api"
version = "0.0.1"
edition = "2021"

[dependencies]
actix-web = "4"
rand = "0.8.5"
diesel = { version = "2.1.0", features = ["postgres", "r2d2", "chrono"] }
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }
env_logger = "0.10.0"
diesel-derive-enum = { version = "2.1.0", features = ["postgres"] }
chrono = "0.4.26"
actix-cors = "0.6.4"

[dev-dependencies]
mockall = "0.11.2"
serde_json = "1.0"